--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.3.0",
+    "@astrojs/vercel": "^8.1.4",
     "@clerk/astro": "^2.8.0",
     "@fontsource-variable/playfair-display": "^5.2.5",
     "@fontsource/metal": "^5.2.5",
