--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/vercel": "^8.1.4",
     "@clerk/astro": "^2.8.0",
+    "@fontsource-variable/playfair": "^5.2.5",
     "@fontsource-variable/playfair-display": "^5.2.5",
     "@fontsource/metal": "^5.2.5",
+    "@fontsource/playball": "^5.2.5",
     "@neondatabase/serverless": "^1.0.0",
     "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.5",
