--- a/package.json
+++ b/package.json
@@ -9,28 +9,34 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.2.2",
+    "@astrojs/node": "^9.3.0",
     "@astrojs/react": "^4.3.0",
-    "@astrojs/vercel": "^8.1.4",
+    "@astrojs/vercel": "^8.2.1",
     "@clerk/astro": "^2.8.0",
     "@fontsource-variable/playfair": "^5.2.5",
     "@fontsource-variable/playfair-display": "^5.2.5",
     "@fontsource/metal": "^5.2.5",
     "@fontsource/playball": "^5.2.5",
     "@neondatabase/serverless": "^1.0.0",
+    "@phosphor-icons/react": "^2.1.10",
+    "@phosphor-icons/web": "^2.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-form": "^1.14.1",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "astro": "^5.8.0",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
+    "astro": "^5.11.0",
+    "cookie": "^1.0.2",
+    "daisyui": "^5.0.46",
+    "dotenv": "^17.2.0",
+    "drizzle-orm": "^0.44.2",
+    "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.31.1",
-    "tsx": "^4.19.4"
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3"
   }
 }
