--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "thekolenkos",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
