--- a/package.json
+++ b/package.json
@@ -12,34 +12,41 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.3.0",
+    "@astrojs/node": "9.4.3",
     "@astrojs/react": "^4.3.0",
-    "@astrojs/vercel": "^8.2.1",
-    "@clerk/astro": "^2.8.0",
-    "@fontsource-variable/playfair": "^5.2.5",
-    "@fontsource-variable/playfair-display": "^5.2.5",
-    "@fontsource/metal": "^5.2.5",
-    "@fontsource/playball": "^5.2.5",
-    "@neondatabase/serverless": "^1.0.0",
-    "@phosphor-icons/react": "^2.1.10",
+    "@astrojs/vercel": "8.2.6",
+    "@clerk/astro": "^2.11.7",
+    "@fontsource-variable/dm-sans": "^5.2.6",
+    "@fontsource-variable/playfair": "^5.2.6",
+    "@fontsource-variable/playfair-display": "^5.2.6",
+    "@fontsource/dm-serif-text": "^5.2.6",
+    "@neondatabase/serverless": "^1.0.1",
     "@phosphor-icons/web": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.7",
-    "@tanstack/react-form": "^1.14.1",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "astro": "^5.11.0",
+    "@tabler/icons-react": "^3.34.1",
+    "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-form": "^1.19.2",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
+    "astro": "5.13.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
-    "daisyui": "^5.0.46",
-    "dotenv": "^17.2.0",
-    "drizzle-orm": "^0.44.2",
+    "daisyui": "^5.0.51",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.5",
+    "motion": "^12.23.12",
+    "nanostores": "^1.0.1",
     "postgres": "^3.4.7",
-    "react": "^19.1.0",
+    "react": "^19.1.1",
     "react-countdown": "^2.3.6",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.7"
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "drizzle-kit": "^0.31.4",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.5",
+    "tw-animate-css": "^1.3.7"
   }
 }
