--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@astrojs/node": "9.4.3",
     "@astrojs/react": "^4.3.0",
-    "@astrojs/vercel": "8.2.6",
+    "@astrojs/vercel": "^8.0.4",
     "@clerk/astro": "^2.11.7",
     "@fontsource-variable/dm-sans": "^5.2.6",
     "@fontsource-variable/playfair": "^5.2.6",
@@ -27,13 +27,14 @@
     "@tanstack/react-form": "^1.19.2",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
-    "astro": "5.13.3",
+    "astro": "^5.15.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "daisyui": "^5.0.51",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
+    "embla-carousel-react": "^8.6.0",
     "motion": "^12.23.12",
     "nanostores": "^1.0.1",
     "postgres": "^3.4.7",
@@ -45,7 +46,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7"
   }
